# TextEditor

./: CMakeLists.txt  main.cpp
include/: Application.hpp  GapBuffer.hpp  Window.hpp
src/: Application.cpp  GapBuffer.cpp  Window.cpp
